Features and Cleanup: - Added new Action" Buttons" called apply damage, apply ailment and gain ailment  below chat messages which automatically the damage of a hit, it's inflict effects or its ailment effects - Bleed now triggers before AutoEffects are added - Changes conditional options to just #Section, which works as an unconditional AutoEffect but prints in a seperate section as a conditional effect - Added Target option to Require and Consume, making them apply to the ailments/bars of the target and not the user - Also added Target option to CustomMessage, making it display when targetting an enemy - Added support for picking a target instead of the current system of using the selected token. Currently not used - Fixed a solid amount of bugs

--- a/ProjectMoonTRPG/ProjectMoonTRPGStyle.css
+++ b/ProjectMoonTRPG/ProjectMoonTRPGStyle.css
@@ -2600,7 +2600,7 @@ height: 35px;}
 /* For the love of all that is holy do not change these styling rules. I cannot describe to you how long it took to get them right */
 .sheet-rolltemplate-actionbuttons:not(:first-child) .sheet-actionButtonBlocker {
     position: absolute;
-    height: 50px;
+    height: calc(100% + 16px);
     margin-top: -60px;
     background-color: #353535;
     top: 25px;
